# flask-rest-api

./: .editorconfig  .env.example  README.md  pyproject.toml
app/: __init__.py  app.py  config.py
app/api/: __init__.py
app/database/: __init__.py
app/templates/: 404.html  index.html
