[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = "Example REST API created with Flask"
authors = ["Sean O'Connor <so@seano.dev>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
